corpus/arrays.txt
============================================
arrays - one bit_select plus one part_select
============================================

function f;
    left[1][1:0] = right[1][1:0];
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (bit_select1
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (bit_select1
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))))))))))))))
  (package_or_generate_item_declaration))



============================================
arrays - two bit_select plus one part_select
============================================

function f;
    left[1][2][1:0] = right[1][3][1:0];
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (bit_select1
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (bit_select1
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))))))))))))))
  (package_or_generate_item_declaration))



============================================
arrays - one index bit_select plus one part_select
============================================

function f;
    left[i][1:0] = right[i][1:0];
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (bit_select1
                          (expression
                            (primary
                              (simple_identifier))))
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (bit_select1
                            (expression
                              (primary
                                (simple_identifier))))
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))))))))))))))
  (package_or_generate_item_declaration))



============================================
arrays - two part_select
============================================

function f;
    left[1:0][1:0] = right[1:0][1:0];
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))))))))))))))
  (package_or_generate_item_declaration))



============================================
arrays - member_identifier
============================================

function f;
    left.member = right.member;
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (member_identifier
                          (simple_identifier))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (member_identifier
                            (simple_identifier))))))))))))))
  (package_or_generate_item_declaration))



============================================
arrays - member_identifier and bit_select
============================================

function f;
    left.member.nested[1][2] = right.member.nested[1][2];
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (member_identifier
                          (simple_identifier))
                        (member_identifier
                          (simple_identifier))
                        (bit_select1
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (member_identifier
                            (simple_identifier))
                          (member_identifier
                            (simple_identifier))
                          (bit_select1
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))))))))))))))
  (package_or_generate_item_declaration))


============================================
arrays - member_identifier, bit_select, part_select
============================================

function f;
    left.member.nested[1][2][1:0][1:0] = right.member.nested[1][2][1:0][1:0];
endfunction;

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (member_identifier
                          (simple_identifier))
                        (member_identifier
                          (simple_identifier))
                        (bit_select1
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (expression
                            (primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))
                        (constant_range
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number))))))
                          (constant_expression
                            (constant_primary
                              (primary_literal
                                (integral_number
                                  (decimal_number
                                    (unsigned_number)))))))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (member_identifier
                            (simple_identifier))
                          (member_identifier
                            (simple_identifier))
                          (bit_select1
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))
                          (constant_range
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (constant_expression
                              (constant_primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number)))))))))))))))))))
  (package_or_generate_item_declaration))
