corpus/classes.txt
============================================
classes - attribute access
============================================

function foo;
   class_id.attribute = value;
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (ERROR
          (clockvar_expression
            (clockvar
              (simple_identifier))
            (select1
              (member_identifier
                (simple_identifier))))
          (simple_identifier))))))
