corpus/function.txt
============================================
function - declaration
============================================

function int foo(string bar, type1 baz);
endfunction

----

(source_file (package_or_generate_item_declaration
  (function_declaration (function_body_declaration
    (function_data_type_or_implicit1 (data_type_or_void (data_type (integer_atom_type))))
    (function_identifier (function_identifier (simple_identifier)))
    (tf_port_list
      (tf_port_item1 (data_type_or_implicit1 (data_type)) (port_identifier (simple_identifier)))
      (tf_port_item1 (data_type_or_implicit1 (data_type (simple_identifier))) (port_identifier (simple_identifier)))
    )
  ))
))
