corpus/interface.txt
============================================
interface - directives
============================================

interface foo;
  import uvm_pkg::*;
  `include "uvm_macros.svh"
endinterface

----

(source_file
  (interface_declaration
    (interface_ansi_header
      (interface_identifier
        (simple_identifier)))
    (interface_or_generate_item
      (package_or_generate_item_declaration
        (data_declaration
          (package_import_declaration
            (package_import_item
              (package_identifier
                (simple_identifier)))))))
    (interface_or_generate_item
      (include_compiler_directive
        (double_quoted_string)))))
